# ancap

./: .dockerignore  .env.example  .env.moltbook  .env.telegram  .gitignore  AUDIT.md  Dockerfile  FRONTEND.md  LOG.md  QUICKSTART.md  README.md  ROADMAP.md  alembic.ini  claude-code-settings.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
ACP-crypto/: README.md  genesis-addresses.json
ACP-crypto/acp-crypto/: Cargo.toml  README.md
ACP-crypto/acp-crypto/src/: address.rs  block.rs  bytes.rs  difficulty.rs  dilithium.rs  domain.rs  ed25519.rs  error.rs  hybrid.rs  identity.rs  kdf.rs  keystore.rs  lib.rs  limits.rs  merkle.rs  protocol_params.rs  rpc_hex.rs  seed.rs  traits.rs  tx.rs  wire.rs
ACP-crypto/acp-crypto/tests/: block_merkle_roundtrip.rs  hybrid_roundtrip.rs  identity_roundtrip.rs  keystore_full_pqc_roundtrip.rs  keystore_roundtrip.rs  mnemonic_roundtrip.rs  receive_address_is_stable.rs  tx_backcompat_v1_decode.rs  tx_roundtrip.rs  wire_roundtrip.rs
ACP-crypto/acp-node/: Cargo.toml  Dockerfile  README.md  acp-node.toml.docker  acp-node.toml.example
ACP-crypto/acp-node/src/: config.rs  emission.rs  main.rs  mempool.rs  miner.rs  score.rs  sync.rs  vesting.rs
ACP-crypto/acp-node/src/chain/: baninfo.rs  banlog.rs  banlog_hash.rs  mod.rs  reason_hash.rs
ACP-crypto/acp-node/src/exports/: gc.rs  gc_apply.rs  gc_plan_store.rs  mod.rs  plans_store.rs  state_fingerprint.rs
ACP-crypto/acp-node/src/exports/maintain/: auto.rs  config.rs  fingerprint.rs  gc_apply.rs  gc_plan.rs  log.rs  mod.rs  plans.rs  safety.rs  status.rs  types.rs
ACP-crypto/acp-node/src/rpc/: handlers.rs  mod.rs  types.rs
ACP-crypto/acp-node/src/storage/: db.rs  mod.rs  rocks.rs  schema.rs
ACP-crypto/acp-node/src/util/: date.rs  export_lock.rs  fs_usage.rs  hash.rs  id.rs  inprogress.rs  log_tail.rs  mod.rs  path_sanitize.rs  ring_log.rs
ACP-crypto/acp-wallet/: Cargo.toml  README.md
ACP-crypto/acp-wallet/examples/: build_and_submit_block2.rs  build_and_submit_genesis.rs  build_and_submit_genesis_custom.rs  check_balances.rs  first_tx.rs  genesis_wallets.rs  new_receive_wallet.rs  transfer_500_acp.rs  transfer_ecosystem_to_address.rs
ACP-crypto/acp-wallet/src/: address_book.rs  main.rs  tx_build.rs
alembic/: env.py
app/: __init__.py  config.py  constants.py  main.py
docs/: ARCHITECTURE_LAYERS.md  AUDIT-2026-04-29.md  DELIVERY_BOARD.md  DEMO_CONTRACTS.md  DEMO_CONTRACTS_MILESTONES.md  DEMO_GOLDEN_PATH.md  PLAN_L0_TO_L3.md  RELEASE_v1.0.0.md  REPUTATION_2.md  RISK_REGISTER.md  VISION.md  golden-path-bugs.md  kiro-models-list.json  openclaw-chat-fix.md  openclaw-kiro-config.md  openclaw-kiro-snippet.json5
frontend-app/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  (+1 more)
(+340 files in other folders)
