[package]
name = "acp-crypto"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["pqc"]
pqc = ["pqcrypto-dilithium", "pqcrypto-traits"]

[dependencies]
thiserror = "1"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ed25519-dalek = { version = "2", features = ["rand_core"] }

# Mnemonic / seed (rand for Mnemonic::generate_in)
bip39 = { version = "2", default-features = false, features = ["std", "rand"] }

# KDF + AEAD keystore
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
base64ct = { version = "1", features = ["std"] }
hex = "0.4"
bech32 = "0.11"

pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }
