[package]
name = "acp-node"
version = "0.1.0"
edition = "2021"

[features]
default = []
pqc = ["acp-crypto/pqc"]

[dependencies]
acp-crypto = { path = "../acp-crypto" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

anyhow = "1"
thiserror = "1"

rocksdb = "0.22"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
flate2 = "1.0"
fs2 = "0.4"
fs4 = "0.13"
filetime = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
toml = "0.8"