[package]
name = "acp-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
acp-crypto = { path = "../acp-crypto", default-features = true }
hex = "0.4"
rand_core = "0.6"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
